force-app/main/default/objects/NotaFiscal__c/NotaFiscal__c.object-meta.xml
<CustomObject>
    <label>Nota Fiscal</label>
    <nameField>
        <label>Nota Fiscal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>