force-app/main/default/objects/NotaFiscal__c/fields/AccessKey__c.field-meta.xml
<CustomField>
    <fullName>AccessKey__c</fullName>
    <externalId>true</externalId>
    <label>Chave de Acesso</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>