force-app/main/default/objects/NotaFiscal__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código do Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>Notas_Fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>