force-app/main/default/objects/NotaFiscal__c/fields/Base64__c.field-meta.xml
<CustomField>
    <fullName>Base64__c</fullName>
    <label>Base64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>