force-app/main/default/objects/NotaFiscal__c/fields/BranchOffice__c.field-meta.xml
<CustomField>
    <fullName>BranchOffice__c</fullName>
    <label>Filial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>