force-app/main/default/objects/NotaFiscal__c/fields/CFOP__c.field-meta.xml
<CustomField>
    <fullName>CFOP__c</fullName>
    <label>CFOP</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>