force-app/main/default/objects/NotaFiscal__c/fields/CFOPDescription__c.field-meta.xml
<CustomField>
    <fullName>CFOPDescription__c</fullName>
    <label>Descrição de CFOP</label>
    <type>TextArea</type>
</CustomField>