force-app/main/default/objects/NotaFiscal__c/fields/CNPJCode__c.field-meta.xml
<CustomField>
    <fullName>CNPJCode__c</fullName>
    <label>Código do CNPJ do Emissor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>