force-app/main/default/objects/NotaFiscal__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>Notas_Fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>