force-app/main/default/objects/NotaFiscal__c/fields/DuplicateMaturity__c.field-meta.xml
<CustomField>
    <fullName>DuplicateMaturity__c</fullName>
    <label>Vencimento Duplicata</label>
    <required>true</required>
    <type>Date</type>
</CustomField>