force-app/main/default/objects/NotaFiscal__c/fields/HoraCriacao__c.field-meta.xml
<CustomField>
    <fullName>HoraCriacao__c</fullName>
    <label>Hora da Criação</label>
    <type>DateTime</type>
</CustomField>