force-app/main/default/objects/NotaFiscal__c/fields/Invoice_CreationDate__c.field-meta.xml
<CustomField>
    <fullName>Invoice_CreationDate__c</fullName>
    <label>Data de criação da Nota Fiscal</label>
    <type>Date</type>
</CustomField>