force-app/main/default/objects/NotaFiscal__c/fields/Invoice_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_TotalAmount__c</fullName>
    <label>Valor Total da Nota Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>