force-app/main/default/objects/NotaFiscal__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <label>Status de Nota Fiscal</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>