force-app/main/default/objects/NotaFiscal__c/fields/OrderCode__c.field-meta.xml
<CustomField>
    <fullName>OrderCode__c</fullName>
    <label>Código Pedido</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>