force-app/main/default/objects/NotaFiscal__c/fields/ReceiverAccountCode__c.field-meta.xml
<CustomField>
    <fullName>ReceiverAccountCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriedade</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas Fiscais (Propriedade)</relationshipLabel>
    <relationshipName>Notas_Fiscais1</relationshipName>
    <type>Lookup</type>
</CustomField>