force-app/main/default/objects/NotaFiscal__c/fields/Serie__c.field-meta.xml
<CustomField>
    <fullName>Serie__c</fullName>
    <label>Série</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>