force-app/main/default/objects/NotaFiscal__c/fields/StateRegistration__c.field-meta.xml
<CustomField>
    <fullName>StateRegistration__c</fullName>
    <label>Inscrição Estadual (Cliente)</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>