force-app/main/default/objects/NotaFiscal__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Valores</label>
    <length>40</length>
    <type>Text</type>
</CustomField>