force-app/main/default/objects/NotaFiscal__c/fields/Volumn__c.field-meta.xml
<CustomField>
    <fullName>Volumn__c</fullName>
    <label>Volume</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>