force-app/main/default/objects/NotaFiscal__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Peso</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>