force-app/main/default/objects/NotaFiscal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvoiceStatus__c</columns>
    <columns>InvoiceNumber__c</columns>
    <columns>Invoice_TotalAmount__c</columns>
    <columns>Invoice_CreationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>